# SoftwareTesting

./: CMakeList.txt  CMakeLists.txt  README.md  asd  buildcommand.txt  class.hpp  main.cpp
.github/workflows/: googletest-framework.yml
